--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ dependencies = [
   "uvicorn>=0.40.0",
 ]
 
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["test"]
+
 [tool.setuptools.packages.find]
 where = ["src"]
 
@@ -19,7 +23,7 @@ where = ["src"]
 dev = ["ruff>=0.14.14", "ty>=0.0.14"]
 
 [tool.pyright]
-include = ["src"]
+include = ["src", "test"]
 extraPaths = ["src"]
 
 typeCheckingMode = "strict"
