--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,13 @@ testpaths = ["test"]
 where = ["src"]
 
 [dependency-groups]
-dev = ["ruff>=0.14.14", "ty>=0.0.14"]
+dev = [
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
+    "requests>=2.32.5",
+    "ruff>=0.14.14",
+    "ty>=0.0.14",
+]
 
 [tool.pyright]
 include = ["src", "test"]
@@ -44,3 +50,4 @@ ty = "ty check"
 
 check = ["ruff", "pyright", "ty"]
 dev = "uvicorn main:app --app-dir src --host 127.0.0.1 --port 8000 --reload"
+debug = "python src/debug/debugger.py"
