--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ where = ["src"]
 
 [dependency-groups]
 dev = [
+    "httpx>=0.28.1",
     "pytest-asyncio>=1.3.0",
     "pytest-cov>=7.0.0",
     "requests>=2.32.5",
